# app/models/video_library.rb
@@ -1,0 +1,4 @@
+class VideoLibrary < ApplicationRecord
+  validates :description, presence: true
+  validates :video_link, presence: true, format: { with: URI::DEFAULT_PARSER.make_regexp(%w[http https]), message: 'must be a valid URL' }
+end
