# app/serializers/video_library_serializer.rb
@@ -1,0 +1,3 @@
+class VideoLibrarySerializer < ActiveModel::Serializer
+  attributes :id, :description, :video_link
+end
